# Depot-Downloader-Rust

./: Cargo.toml  README.md
src/: main.rs
src/cdn/: client.rs  download.rs  mod.rs  server.rs
src/config/: credentials.rs  mod.rs  settings.rs
src/downloader/: manager.rs  mod.rs  progress.rs
src/gui/: app.rs  components.rs  dialogs.rs  mod.rs
src/manifest/: decryption.rs  fetcher.rs  mod.rs  parser.rs  store.rs
src/steam/: auth.rs  mod.rs  session.rs  web_api.rs
